# DingDong

./: .env  .firebaserc  .gitignore  CLAUDE.md  README.md  esp-idf-init.ps1  firebase.json
cloud/: .env.example  curl-tests.md  firestore.rules
cloud/functions/: .eslintrc.js  hmac.js  index.js  package-lock.json  package.json
docs/: API.md  APP_GUIDE.md  FIRMWARE_GUIDE.md  HANDOVER.md  PRD.md  SECURITY.md  TEST_CHECKLIST.md
firmware/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/main/api/: auth_middleware.cpp  http_server.cpp  notify_client.cpp  routes_protected.cpp  routes_public.cpp
firmware/main/config/: dd_config.h
firmware/main/shared/: dd_types.h
firmware/main/tasks/: ble_prov_task.cpp  camera_task.cpp  sensor_task.cpp  storage_task.cpp  stream_task.cpp  wifi_task.cpp
mobile/: README.md  firebase.json  pubspec.yaml
mobile/android/: build.gradle.kts
mobile/android/app/: build.gradle.kts  google-services.json
mobile/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
mobile/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: firebase_options.dart  main.dart
mobile/lib/components/: dd_bottom_sheet.dart  dd_button.dart  dd_card.dart  dd_chip.dart  dd_empty_state.dart  dd_list_tile.dart  dd_loading_indicator.dart  dd_logo.dart  dd_text_field.dart  (+2 more)
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
(+56 files in other folders)
