idf_component_register(
    SRCS
        "main.cpp"
        "tasks/sensor_task.cpp"
        "tasks/camera_task.cpp"
        "tasks/storage_task.cpp"
        "tasks/wifi_task.cpp"
        "tasks/stream_task.cpp"
        "api/http_server.cpp"
        "api/auth_middleware.cpp"
        "api/routes_public.cpp"
        "api/routes_protected.cpp"
        "api/notify_client.cpp"
    INCLUDE_DIRS
        "."
        "config"
        "shared"
        "api"
        "tasks"
    REQUIRES
        esp_wifi
        esp_http_server
        esp_http_client
        nvs_flash
        driver
        fatfs
        sdmmc
        mbedtls
        esp_timer
        esp_netif
        esp_event
        freertos
        log
        json
        lwip
        esp_hw_support
        spi_flash
)
